# hrt_task

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  tests.cpp
lib/: CMakeLists.txt  callback.cpp  callback.hpp
